--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,4 +103,5 @@
     <string name="msg_camera_framework_bug">你没有允许响应权限,或底层遇到问题,扫描无法进行,请退出重新尝试扫描!</string>
     <string name="button_ok">OK</string>
     <string name="all_comment">查看所有评论</string>
+    <string name="send_comment_">发表评论</string>
 </resources>
